--- a/Northwind.Application/NorthwindApp.csproj
+++ b/Northwind.Application/NorthwindApp.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>4cc3e1ed-47d4-4e0c-aa76-fa006625e034</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
+	<DockerfileFile>..\Dockerfile</DockerfileFile>
   </PropertyGroup>
 
   <ItemGroup>
