NorthwindApp-5 Designed DB seed process based on SQL script

--- a/Northwind.Application/appsettings.Development.json
+++ b/Northwind.Application/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Local_MSSQL_Server": "Server=(localdb)\\MSSQLLocalDB; Database=NorthwindDB;Integrated Security=true"
+    "SQL_Server": "Server=(localdb)\\MSSQLLocalDB; Database=NorthwindDB;Integrated Security=true"
   }
 }
