--- a/Northwind.Application/NorthwindApp.csproj
+++ b/Northwind.Application/NorthwindApp.csproj
@@ -8,6 +8,7 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
 	<DockerfileFile>..\Dockerfile</DockerfileFile>
+	<DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
