--- a/Northwind.Application/Properties/launchSettings.json
+++ b/Northwind.Application/Properties/launchSettings.json
@@ -31,12 +31,13 @@
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "environmentVariables": {
         "ASPNETCORE_HTTPS_PORTS": "8081",
-        "ASPNETCORE_HTTP_PORTS": "8080"
+        "ASPNETCORE_HTTP_PORTS": "8080",
+        "ASPNETCORE_ENVIRONMENT": "Docker"
       },
-      "publishAllPorts": true,
-      "useSSL": true
-    }
-  },
+       "publishAllPorts": true,
+        "useSSL": true
+      }
+    },
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
