--- a/Northwind.Application/Properties/launchSettings.json
+++ b/Northwind.Application/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Local"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5007"
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Local"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7161;http://localhost:5007"
@@ -22,21 +22,22 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Local"
       }
-    },
-    "Docker": {
+    }
+    ,
+    "Docker": 
+    {
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "environmentVariables": {
         "ASPNETCORE_HTTPS_PORTS": "8081",
-        "ASPNETCORE_HTTP_PORTS": "8080",
-        "ASPNETCORE_ENVIRONMENT": "Docker"
+        "ASPNETCORE_HTTP_PORTS": "8080"
       },
-       "publishAllPorts": true,
-        "useSSL": true
-      }
+      "publishAllPorts": true,
+      "useSSL": true
+    }
     },
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
