--- a/Northwind.Application/appsettings.json
+++ b/Northwind.Application/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Issuer": "NorthwindApp",
+  "Audience": "Any user",
+  "SecretKey": "secretkey123"
 }
