--- a/Northwind.Application/appsettings.Development.json
+++ b/Northwind.Application/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "SQL_Server": "Server=(localdb)\\MSSQLLocalDB; Database=NorthwindDB;Integrated Security=true"
+    "SQL_Server": "Data Source=sql-server;Initial Catalog=Northwind_Docker;User ID=sa;Password=Haemorr_8421;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
