Created Employee list view

--- a/Northwind.Application/appsettings.json
+++ b/Northwind.Application/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "Issuer": "NorthwindApp",
   "Audience": "Any user",
-  "SecretKey": "secretkey123"
+  "SecretKey": "secretkey123",
+  "ConnectionStrings": {
+    "Azure_SQL_Server": "Server=tcp:az-webapp-db-server-2.database.windows.net,1433;Initial Catalog=Northwind_Azure;Persist Security Info=False;User ID=vadzim;Password=Haemorr_8421;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
