--- a/Northwind.Application/Dockerfile
+++ b/Northwind.Application/Dockerfile
@@ -9,20 +9,20 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Northwind.Application/NorthwindApp.csproj", "Northwind.Application/"]
+COPY ["Northwind.Application/Northwind.Application.csproj", "Northwind.Application/"]
 COPY ["Northwind.Data/Northwind.Data.csproj", "Northwind.Data/"]
 COPY ["Northwind.Bll/Northwind.Bll.csproj", "Northwind.Bll/"]
 
-RUN dotnet restore "./Northwind.Application/./NorthwindApp.csproj"
+RUN dotnet restore "./Northwind.Application/./Northwind.Application.csproj"
 COPY . .
 WORKDIR "/src/Northwind.Application"
-RUN dotnet build "./NorthwindApp.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "./Northwind.Application.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./NorthwindApp.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./Northwind.Application.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "NorthwindApp.dll"]
+ENTRYPOINT ["dotnet", "Northwind.Application.dll"]
