--- a/.github/workflows/main_northwind-app.yml
+++ b/.github/workflows/main_northwind-app.yml
@@ -23,10 +23,10 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build PROJECT_NAME --configuration Release
+        run: dotnet build Northwind.Application --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish PROJECT_NAME -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish Northwind.Application -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
