Designed Category CRUD controller and views

--- a/Northwind.Application/Northwind.Application.csproj
+++ b/Northwind.Application/Northwind.Application.csproj
@@ -30,6 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Northwind.Bll\Northwind.Bll.csproj" />
     <ProjectReference Include="..\Northwind.Data\Northwind.Data.csproj" />
   </ItemGroup>
 
