--- a/Northwind.Application/appsettings.Production.json
+++ b/Northwind.Application/appsettings.Production.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "SQL_Server": "Server=(localdb)\\MSSQLLocalDB; Database=NorthwindDB;Integrated Security=true"
+    "SQL_Server": "Server=tcp:az-webapp-db-server-2.database.windows.net,1433;Initial Catalog=Northwind_Azure;Persist Security Info=False;User ID=vadzim;Password=Haemorr_8421;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
