--- a/Northwind.Application/appsettings.json
+++ b/Northwind.Application/appsettings.json
@@ -10,5 +10,8 @@
   "Audience": "Any user",
   "SecretKey": "secretkey123",
   "ScriptPath": "..\\Northwind.Data\\SQL_Scripts\\Downloaded_Script.sql",
-  "ScriptUrl": "https://raw.githubusercontent.com/microsoft/sql-server-samples/master/samples/databases/northwind-pubs/instnwnd.sql"
+  "ScriptUrl": "https://raw.githubusercontent.com/microsoft/sql-server-samples/master/samples/databases/northwind-pubs/instnwnd.sql",
+  "ConnectionStrings": {
+    "SQL_Server": ""
+  }
 }
