Adjusted appsettings files

--- a/Northwind.Application/appsettings.Development.json
+++ b/Northwind.Application/appsettings.Development.json
@@ -6,7 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "SQL_Server": "Server=tcp:az-webapp-db-server-2.database.windows.net,1433;Initial Catalog=Northwind_Azure;Persist Security Info=False;User ID=vadzim;Password=Haemorr_8421;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "SQL_Server_Docker": "Data Source=sql-server;Initial Catalog=Northwind_Docker;User ID=sa;Password=Haemorr_8421;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "SQL_Server": "Data Source=sql-server;Initial Catalog=Northwind_Docker;User ID=sa;Password=Haemorr_8421;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
