--- a/Northwind.Application/appsettings.json
+++ b/Northwind.Application/appsettings.json
@@ -6,12 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "Issuer": "NorthwindApp",
-  "Audience": "Any user",
-  "SecretKey": "secretkey123",
   "ScriptPath": "Downloaded_Script.sql",
-  "ScriptUrl": "https://raw.githubusercontent.com/microsoft/sql-server-samples/master/samples/databases/northwind-pubs/instnwnd.sql",
-  "ConnectionStrings": {
-    "SQL_Server": "Server=tcp:az-webapp-db-server-2.database.windows.net,1433;Initial Catalog=Northwind_Azure;Persist Security Info=False;User ID=vadzim;Password=Haemorr_8421;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-  }
+  "ScriptUrl": "https://raw.githubusercontent.com/microsoft/sql-server-samples/master/samples/databases/northwind-pubs/instnwnd.sql"
 }
