--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -3,13 +3,14 @@ version: '3.4'
 services:
   northwindapp:
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_ENVIRONMENT=Docker
       - ASPNETCORE_URLS=https://+;http://+
       - ASPNETCORE_HTTP_PORT=8080
       - ASPNETCORE_HTTPS_PORT=8081
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=Haemorr_8421
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=../https/Northwind.Application.pfx
     ports:
       - "8080:80"
       - "8081:443"
     volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
-      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+      - ~/.aspnet/https:/https:ro
