--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,8 @@ services:
   northwindapp:
     image: ${DOCKER_REGISTRY-}northwindapp
     build:
-      context: .
-      dockerfile: Dockerfile
+      dockerfile: Northwind.Application/Dockerfile
     container_name: northwindapp-container
-    ports:
-        - 8080:80
-        - 8081:443
-    environment: 
-        - ASPNETCORE_URLS=https://+;http://+
     networks: 
         - dev
 
