Implemented repository pattern for Employees

--- a/Northwind.Data/Northwind.Data.csproj
+++ b/Northwind.Data/Northwind.Data.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="SQL_Scripts\**" />
+    <EmbeddedResource Remove="SQL_Scripts\**" />
+    <None Remove="SQL_Scripts\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3">
       <PrivateAssets>all</PrivateAssets>
@@ -18,10 +24,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="SQL_Scripts\" />
   </ItemGroup>
 
 </Project>
