--- a/Northwind.Bll/Northwind.Bll.csproj
+++ b/Northwind.Bll/Northwind.Bll.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
+    <ProjectReference Include="..\Northwind.Data\Northwind.Data.csproj" />
   </ItemGroup>
 
 </Project>
