--- a/Northwind.Bll/Northwind.Bll.csproj
+++ b/Northwind.Bll/Northwind.Bll.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Communication.Email" Version="1.0.1" />
+    <PackageReference Include="Bogus" Version="35.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
   </ItemGroup>
 
