Added migration to create admin user and role

--- a/Northwind.Application/appsettings.json
+++ b/Northwind.Application/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ScriptPath": "Downloaded_Script.sql",
-  "ScriptUrl": "https://raw.githubusercontent.com/microsoft/sql-server-samples/master/samples/databases/northwind-pubs/instnwnd.sql"
+  "SeedScriptPath": "Downloaded_Script.sql",
+  "ScriptUrl": "https://raw.githubusercontent.com/microsoft/sql-server-samples/master/samples/databases/northwind-pubs/instnwnd.sql",
+  "AdminScriptPath": "AdminScript.sql"
 }
