--- a/.github/workflows/northwind-app-tests.yml
+++ b/.github/workflows/northwind-app-tests.yml
@@ -1,7 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
+name: Run Tests
 
 on:
   push:
@@ -19,6 +19,6 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore Northwind.Tests.dll
     - name: Test
       run: dotnet test Northwind.Tests.dll --no-build --verbosity normal
