--- a/.github/workflows/northwind-app-tests.yml
+++ b/.github/workflows/northwind-app-tests.yml
@@ -19,6 +19,6 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore Northwind.Tests
+      run: dotnet restore Northwind.Application
     - name: Test
       run: dotnet test --no-build --verbosity normal
