--- a/.github/workflows/northwind-app-tests.yml
+++ b/.github/workflows/northwind-app-tests.yml
@@ -21,4 +21,4 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore Northwind.Application
     - name: Test
-      run: dotnet test Northwind.Tests --no-build --verbosity normal
+      run: dotnet test Northwind.Application --no-build --verbosity normal
