--- a/.github/workflows/main_northwind-app.yml
+++ b/.github/workflows/main_northwind-app.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Build with dotnet
         run: dotnet build Northwind.Application --configuration Release
 
+      - name: Test
+        run: dotnet test Northwind.Tests.csproj --no-build --verbosity normal
+
       - name: dotnet publish
         run: dotnet publish Northwind.Application -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
