Added missing test project to solution

--- a/Northwind.Application/Northwind.Application.csproj
+++ b/Northwind.Application/Northwind.Application.csproj
@@ -41,4 +41,8 @@
     <Folder Include="Areas\Identity\Data\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="Northwind.Tests.csproj" />
+  </ItemGroup>
+
 </Project>
