--- a/Northwind.Application/Northwind.Tests.csproj
+++ b/Northwind.Application/Northwind.Tests.csproj
@@ -17,8 +17,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Northwind.Bll\Northwind.Bll.csproj" />
-    <ProjectReference Include="..\Northwind.Data\Northwind.Data.csproj" />
+    <ProjectReference Include="..\NorthwindApp\Northwind.Application\Northwind.Application.csproj" />
+    <ProjectReference Include="..\NorthwindApp\Northwind.Bll\Northwind.Bll.csproj" />
+    <ProjectReference Include="..\NorthwindApp\Northwind.Data\Northwind.Data.csproj" />
   </ItemGroup>
 
 </Project>
