--- a/.github/workflows/main_northwind-app.yml
+++ b/.github/workflows/main_northwind-app.yml
@@ -22,7 +22,7 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build Northwind.Application --configuration Release
+        run: dotnet build NorthwindApp.sln --configuration Release
 
       - name: Test
         run: dotnet test Northwind.Tests.csproj --no-build --verbosity normal
