Edited path for csproj file

--- a/.github/workflows/main_northwind-app.yml
+++ b/.github/workflows/main_northwind-app.yml
@@ -25,7 +25,7 @@ jobs:
         run: dotnet build NorthwindApp.sln --configuration Release
 
       - name: Test
-        run: dotnet test Northwind.Tests/Northwind.Tests.csproj --no-build --verbosity normal
+        run: dotnet test .\Northwind.Tests\Northwind.Tests.csproj --no-build --verbosity normal
 
       - name: dotnet publish
         run: dotnet publish Northwind.Application -c Release -o ${{env.DOTNET_ROOT}}/myapp
