Developed Integration Tests for Index endpoints

--- a/Northwind.Application/Northwind.Application.csproj
+++ b/Northwind.Application/Northwind.Application.csproj
@@ -45,4 +45,8 @@
     <None Include="Northwind.Tests.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+  	<InternalsVisibleTo Include="Northwind.Tests.csproj" />
+  </ItemGroup>
+
 </Project>
