--- a/.github/workflows/main_northwind-app.yml
+++ b/.github/workflows/main_northwind-app.yml
@@ -28,7 +28,7 @@ jobs:
         run: dotnet test Northwind.Tests/Northwind.Tests.csproj --no-build --verbosity normal --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish NorthwindApp.sln -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish Northwind.Application/Northwind.Application.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
