--- a/.github/workflows/main_northwind-app.yml
+++ b/.github/workflows/main_northwind-app.yml
@@ -24,10 +24,13 @@ jobs:
       - name: Build with dotnet
         run: dotnet build NorthwindApp.sln --configuration Release
 
-      - name: Test
-        run: dotnet test Northwind.Tests/Northwind.Tests.csproj --no-build --verbosity normal --configuration Release
+      - name: Integration Tests
+        run: dotnet test Northwind.IntegrationTests/Northwind.IntegrationTests.csproj --no-build --verbosity normal --configuration Release
 
-      - name: dotnet publish
+      - name: Module Tests
+        run: dotnet test Northwind.ModuleTests/Northwind.ModuleTests.csproj --no-build --verbosity normal --configuration Release
+
+      - name: Dotnet publish
         run: dotnet publish Northwind.Application/Northwind.Application.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
