--- a/Northwind.Application/appsettings.Development.json
+++ b/Northwind.Application/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "SQL_Server": "Server=(localdb)\\MSSQLLocalDB; Database=NorthwindDB;Integrated Security=true"
+    "SQL_Server": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=NorthwindDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
