--- a/Northwind.Application/Northwind.Application.csproj
+++ b/Northwind.Application/Northwind.Application.csproj
@@ -18,6 +18,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
   </ItemGroup>
@@ -29,10 +33,6 @@
 
   <ItemGroup>
     <Folder Include="Areas\Identity\Data\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Northwind.IntegrationTests.csproj" />
   </ItemGroup>
 
   <ItemGroup>
