Refactored DB seed logics

--- a/Northwind.Bll/Northwind.Bll.csproj
+++ b/Northwind.Bll/Northwind.Bll.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Azure.Communication.Email" Version="1.0.1" />
     <PackageReference Include="Bogus" Version="35.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
