--- a/Northwind.Application/Properties/launchSettings.json
+++ b/Northwind.Application/Properties/launchSettings.json
@@ -24,10 +24,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
-    }
-    ,
-    "Docker": 
-    {
+    },
+    "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
@@ -38,7 +36,7 @@
       "publishAllPorts": true,
       "useSSL": true
     }
-    },
+  },
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
