--- a/Northwind.Application/appsettings.Docker.json
+++ b/Northwind.Application/appsettings.Docker.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "SQL_Server": "Data Source=sql-server-container;Initial Catalog=Northwind_Docker;User ID=sa;Password=Haemorr_8421;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "SQL_Server": "Server=sql-server-container;User ID=sa;Password=Haemorr_8421;Database=NorthwindDBDocker;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
