--- a/.github/workflows/main_northwind-app.yml
+++ b/.github/workflows/main_northwind-app.yml
@@ -31,13 +31,13 @@ jobs:
         run: dotnet test Northwind.ModuleTests/Northwind.ModuleTests.csproj --no-build --verbosity normal --configuration Release
 
       - name: Dotnet publish
-        run: dotnet publish Northwind.Application/Northwind.Application.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish Northwind.Application/Northwind.Application.csproj -c Release -o "${{env.DOTNET_ROOT}}\myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ${{env.DOTNET_ROOT}}\myapp
 
   deploy:
     runs-on: windows-latest
