--- a/.github/workflows/main_northwind-app.yml
+++ b/.github/workflows/main_northwind-app.yml
@@ -24,10 +24,10 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build ./Northwind.Application.csproj --configuration Release
+        run: dotnet build Northwind.Application/Northwind.Application.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish ./Northwind.Application.csproj -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish Northwind.Application/Northwind.Application.csproj -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
